# light-control

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  ruff.yml
docs/: notes.md
src/light_control/: __init__.py  constants.py  hid_light.py  hidusb.py  listener.py  main.py  settings.py
src/light_control/scratch/: testing.py  testing2.py  testing3.py  testing4.py
